# myPL

./: CMakeLists.txt  README.md  Translator.cpp  a.out  built_in_fun.h  data_object.h  hw6.cpp  interpreter.h  lexer.h  parser.h  printer.h  test.cpp  token.h  type_checker.h
tests/: load.mypl
